# glGA-edu

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  license.txt
_thirdPartyLibs/: CMakeLists.txt
_thirdPartyLibs/include/ImGUI/: imgui_impl_sdl_glew.h
_thirdPartyLibs/include/gfx/: gfx_fbo.h  gfx_lib.h
_thirdPartyLibs/lib/Linux/: libGLEW.so.1.10.0  libGLEWmx.so.1.10  libGLEWmx.so.1.10.0
_thirdPartyLibs/lib/OSX/: AssimpLog.txt  assimpd  libGLEWmx.1.12.0.dylib  libGLEWmx.dylib  libIrrXMLd.dylib  libassimpd.3.1.1.dylib  libassimpd.4.1.0.dylib  libassimpd.5.0.0.dylib  libassimpd.5.dylib  libassimpd.dylib
_thirdPartyLibs/lib/Windows/: AntTweakBar.lib  AntTweakBar64.lib  BulletCollision_vs2015.lib  BulletCollisiond.lib  BulletDynamics_vs2015.lib  BulletDynamicsd.lib  CORE_RL_Magick++_.lib  CORE_RL_magick_.lib  CORE_RL_wand_.lib  GLFWDLL.lib  ImGUI.lib  ImGUId.lib  ImGui_vs15.lib  ImGui_vs17.lib  LinearMath_vs2015.lib  LinearMathd.lib  SDL2.lib  SDL2_mixer.lib  SDL2main.lib  SDL2test.lib  X11.lib  assimp-vc140-mt.lib  assimp-vc140-mtd.lib  assimp.lib  assimpd.lib  glew32.lib  glew32d.lib  glew32s.lib  glew32sd.lib  glewinfo.txt  irrKlang.lib  openvr_api.lib  soil2-debug.lib  soil2.lib
examples/: CMakeLists.txt
examples/Chapter-09/: AssimpLog.txt  CMakeLists.txt  Chapter-09  Chapter-09.ilk  Chapter-9.cpp  fAxisShader.frag  fPlaneShader.frag  fshader3D.frag  imgui.ini  vAxisShader.vert  vPlaneShader.vert  vshader3D.vert
examples/Chapter-10/: CMakeLists.txt  Chapter-10  Chapter-10.cpp  Chapter-10.ilk  fshader3D.frag  imgui.ini  vshader3D.vert
examples/Chapter-11/: CMakeLists.txt  Chapter-11  Chapter-11.cpp  Chapter-11.ilk  imgui.ini
examples/Chapter-11/Models/: sphere.dae
examples/Chapter-11/Shaders/: fshader3D.frag  vPlaneShader.vert  vshader3D.vert
examples/Chapter-12/: CMakeLists.txt  Chapter-12  Chapter-12.cpp  Chapter-12.ilk  HDRI_frame.cpp  HDRI_frame.h  HDRloader.cpp  HDRloader.h  imgui.ini
examples/Chapter-12/Shaders/: fshader3D.frag  fshaderSkybox.frag  quad.frag  quad.vert  vshader3D.vert  vshaderSkybox.vert
examples/Chapter-13/: CMakeLists.txt  Chapter-13  Chapter-13.cpp  Chapter-13.ilk  imgui.ini
examples/Chapter-13/Shaders/: f1pass.frag  fCubeShader.frag  fDepthShader.frag  fSceneShader.frag  v1pass.vert  vAxisShader.vert  vCubeShader.vert  vDepthShader.vert  vSceneShader.vert
examples/Chapter-14/: CMakeLists.txt  Chapter-14  Chapter-14.cpp  Chapter-14.ilk  imgui.ini
examples/Chapter-14/Shaders/: fshader3D.frag  vAxisShader.vert  vshader3D.vert
examples/Chapter-15/: AssimpLog.txt  CMakeLists.txt  Chapter-15  Chapter-15.cpp  Chapter-15.ilk  PerlinNoise.cpp  imgui.ini
examples/Chapter-15/Shaders/: fshader3D.frag  fshader3DNoise.frag  vshader3D.vert
examples/Chapter-16/: AssimpLog.txt  CMakeLists.txt  Chapter-16  Chapter-16.cpp  Chapter-16.ilk
examples/Chapter-16/Shaders/: fParticleShader.frag  vParticleShader.vert
examples/Chapter-17/: CMakeLists.txt  Chapter-17  Chapter-17.cpp  Chapter-17.ilk  PerlinNoise.cpp  PerlinNoise.h  imgui.ini
examples/Chapter-17/Shaders/: fPlaneShader.frag  fshader3D.frag  vshader3D.vert
examples/Chapter-18/: AssimpLog.txt  CMakeLists.txt  Chapter-18  Chapter-18.cpp  Chapter-18.ilk  PerlinNoise.cpp  imgui.ini
examples/Chapter-18/Shaders/: fshader3D.frag  vshader3D.vert  vshader3DNoise.vert
examples/Chapter-19/: AssimpLog.txt  CMakeLists.txt  Chapter-19  Chapter-19.cpp  Chapter-19.ilk  imgui.ini
examples/Chapter-19/Shaders/: fBlend.frag  vBlend.vert
examples/Chapter-20/: AssimpLog.txt  CMakeLists.txt  Chapter-20  Chapter-20.cpp  imgui.ini
examples/Chapter-20/Models/: Sin.dae
examples/Chapter-20/Shaders/: fshader3D.frag  fshaderBump.frag  fshaderNormal.frag  fshaderWater.frag  vshader3D.vert  vshaderBump.vert  vshaderNormal.vert  vshaderWater.vert
examples/DeferredShading/: AssimpLog.txt  CMakeLists.txt  DeferredShading  DeferredShading.cpp  dirlight.frag  fshaderMesh.frag  meshStatic.vert  meshStatic2.vert  pointlight.frag  quadshader.vert  stencil.frag  stencil.vert
examples/RayTracing/: AssimpLog.txt  CMakeLists.txt  RayTracing  RayTracing.cpp  fake.h  fshaderMesh2.frag  path.frag  ray.frag  ray.vert
examples/basicCompute/: CMakeLists.txt  Comshader.comp  basicCompute.cpp  fshadercomp.frag  vshadercomp.vert
examples/basicCube/: CMakeLists.txt  Extension.h  basicCube  basicCube.cpp  basicCube.ilk  vshaderCube.vert
examples/basicCubeGUI/: CMakeLists.txt  basicCubeGUI  basicCubeGUI.cpp  basicCubeGUI.ilk  imgui.ini  resources.txt  vshaderCube.vert
examples/basicGeometry/: CMakeLists.txt  basicGeometry  basicGeometry.cpp  fshadergeo.frag  gshader.geom  imgui.ini  vshadergeo.vert
examples/basicShading/: CMakeLists.txt  Comshader.comp  basicShading  basicShading.cpp  gshader.geom  imgui.ini  vshaderCube.vert  vshadercomp.vert
examples/basicTesselation/: CMakeLists.txt  basicTesselation  basicTesselation.cpp  imgui.ini  test_fs.glsl  test_tcs.glsl  test_tes.glsl  test_vs.glsl
examples/basicTriangle/: CMakeLists.txt  basicTriangle  basicTriangle.cpp  basicTriangle.ilk  fshaderSimple.frag  vshaderSimple.vert
examples/basicWindow/: CMakeLists.txt  basicWindow  basicWindow.cpp  basicWindow.ilk  visualinfo.txt
libraries/: CMakeLists.txt  Doxyfile
libraries/include/KDTree/: KDTreeVisulization.hpp  PrimitiveTriangle.h  geometry.h  kdtree.h  kdtreeaccel.h  memory.h  parallel.h  pbrt.h  stdafx.h
libraries/include/PRT/: CGA_SH.hpp  CGA_SH_Rotations.h  Diffuse.h  FunctionLight.h  HDRI_frame.h  HDRLight.h  HDRloader.h  Illumination.h  Light.h  MonteCarlo.h  SHRotation.h  Sample.h  Shadow.h  Shadowed.h  Split.h  Utils.h  (+7 more)
openvr/: CMakeLists.txt
openvr/basicCubeOpenVR/: CMakeLists.txt  Cube.h  basicCubeOpenVR.1.trace  basicCubeOpenVR.2.trace  basicCubeOpenVR.ilk  basicCubeOpenVR.trace  fshaderCube.frag  initOpenGL.h  main.cpp  minimalOpenVR.h  steamvr.vrsettings  vshaderCube.vert
openvr/basicOpenVR/: CMakeLists.txt  basicOpenVR.ilk  color.psd  glob.h  initOpenGL.h  main.cpp  matrix.h  minimalOpenVR.h  teapot.h
openvr/hellovr/: CMakeLists.txt  hellovr.ilk  hellovr_opengl_main.cpp
(+202 files in other folders)
